drag video bug fixed on mobile, proceeding with development

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -127,21 +127,19 @@ p {
 header {
   height: 100vh;
   width: 100vw;
-  overflow: hidden; }
+  overflow: hidden;
+  position: relative; }
 
 video {
   transition: margin-left .5s;
   height: 100%;
   transform: translate(-50%, -50%);
-  position: fixed;
+  position: absolute;
   top: 50%;
   left: 50%;
   z-index: -10; }
 
 #video-tint {
-  position: absolute;
-  top: 0;
-  left: 0;
   z-index: -5;
   background-color: rgba(0, 0, 0, 0.4);
   width: 100vw;
