--- a/sass/components/header.scss
+++ b/sass/components/header.scss
@@ -2,22 +2,30 @@ header {
   height: 100vh;
   width: 100vw;
   overflow: hidden;
+  position: relative;
 }
 
 video {
   transition: margin-left .5s;
-  height: 1920px;
+  height: 100%;
   transform: translate(-50%, -50%);
-  position: fixed;
+  position: absolute;
   top: 50%;
   left: 50%;
-  @include z-index(video)
+  @include z-index(video);
+  
 }
 
 #video-tint {
+  // position: absolute;
+  // top: 0;
+  // left: 0;
+  @include z-index(videotint);
   background-color: rgba(0, 0, 0, 0.4);
   width: 100vw;
   height: 100vh;
+
+
 }
 
 #main-logo {
